LPS-00000 gradle-plugins-workspace: fixes reflection failure for Ext tests
Failure:

> Task :buildExtInfo
...
Exception in thread "main" java.lang.ExceptionInInitializerError
	at com.liferay.petra.reflect.ReflectionUtil.<clinit>(ReflectionUtil.java:160)
	at com.liferay.portal.configuration.easyconf.ClassLoaderAggregateProperties.<clinit>(ClassLoaderAggregateProperties.java:429)
	at com.liferay.portal.configuration.easyconf.ComponentPropertiesUtil.createComponentProperties(ComponentPropertiesUtil.java:48)
	at com.liferay.portal.configuration.ConfigurationImpl.<init>(ConfigurationImpl.java:82)
	at com.liferay.portal.util.PropsUtil.<clinit>(PropsUtil.java:437)
	at com.liferay.portal.util.PropsValues.<clinit>(PropsValues.java:31)
	at com.liferay.portal.util.FileImpl.<clinit>(FileImpl.java:1143)
	at com.liferay.portal.tools.ExtInfoBuilder.<clinit>(ExtInfoBuilder.java:93)
Caused by: java.lang.reflect.InaccessibleObjectException: Unable to make protected native java.lang.Object java.lang.Object.clone() throws java.lang.CloneNotSupportedException accessible: module java.base does not "opens java.lang" to unnamed module @774b63bc
	at java.base/java.lang.reflect.AccessibleObject.checkCanSetAccessible(AccessibleObject.java:354)
	at java.base/java.lang.reflect.AccessibleObject.checkCanSetAccessible(AccessibleObject.java:297)
	at java.base/java.lang.reflect.Method.checkCanSetAccessible(Method.java:199)
	at java.base/java.lang.reflect.Method.setAccessible(Method.java:193)
	at com.liferay.petra.reflect.ReflectionUtil.<clinit>(ReflectionUtil.java:153)